home page mobile slogan color fix, mobile line fix, logo larger on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -10,19 +10,20 @@
 }
 
 /* For Chrome */
+::-webkit-scrollbar-track {
+  background: transparent !important;
+}
+
 ::-webkit-scrollbar {
-  width: 11px !important;
+  width: .67rem !important;
   background-color: rgb(49, 49, 49);
 }
 
 ::-webkit-scrollbar-thumb {
   background-color: rgba(255, 255, 255, 0.3) !important;
-  border-radius: 4px !important;
+  border-radius: .25rem !important;
 }
 
-::-webkit-scrollbar-track {
-  background-color: transparent !important;
-}
 
 /* For all browsers */
 /* body {
